--- a/templates/portfolio/portfolio_v3/portfolio.html
+++ b/templates/portfolio/portfolio_v3/portfolio.html
@@ -10,7 +10,7 @@
 
     <!--GRID START-->
 
-    <div class="container ">
+    <div class="container dark_background">
         <div id="masonry-grid" class="mGrid">
 
             <div class="gutter-sizer"></div>
@@ -33,7 +33,7 @@
 
                     <div id="image-modal1" class="mfp-hide modal-box">
                         <img src="{{ item.imageURL }}" alt="">
-                        <div class="modal-box-content">
+                        <div class="modal-box-content dark_background">
                             <h2>{{ item.name }}</h2>
                             <p>{{ item.description }} </p>
                         </div>
