--- a/templates/portfolio/portfolio_v3/service.html
+++ b/templates/portfolio/portfolio_v3/service.html
@@ -1,15 +1,15 @@
 {% load static %}
-<section id="sectionServices" class="dark_background">
+<section id="sectionServices " >
     <div class="sectionTitle">
         <h1>Services</h1>
         <h6>What can I do for you</h6>
     </div>
 
 
-    <div class="container">
+    <div class="container ">
         <div class="row servicesRow">
             {% for item in service %}
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12 dark_background">
                     <div class="servicesBox">
                         <div class="servicesIcon">
                             <img src="{{ item.imageURL }}" alt="" style="border-radius: 50%;width: 48px;height: 48px;">
