--- a/templates/HomePage/blog/blog-single.html
+++ b/templates/HomePage/blog/blog-single.html
@@ -1,4 +1,4 @@
-{% extends 'HomePage/home_base.html' %}
+{% extends 'HomePage/base/home_base.html' %}
 {% load crispy_forms_filters %}
 {% load static %}
 
