--- a/templates/HomePage/about-us.html
+++ b/templates/HomePage/about-us.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block title %}
-
+About  || PortfolioINc
 {% endblock %}
 
-
+{% block about %} active {% endblock  %}
 {% block content %}
     <!-- Breadcrumbs -->
     <div class="breadcrumbs" style="background-image:url({% static  'HomePage/img/breadcrumbs-bg.jpg' %})">
