--- a/templates/HomePage/base/service.html
+++ b/templates/HomePage/base/service.html
@@ -5,9 +5,9 @@
 
 
 {% block title %}
-
+Service
 {% endblock %}
-
+{% block service %} active {% endblock  %}
 {% block content %}
     <div class="breadcrumbs" style="background-image:url('{% static 'HomePage/img/breadcrumbs-bg.jpg' %}')">
         <div class="container">
