--- a/templates/HomePage/contact.html
+++ b/templates/HomePage/contact.html
@@ -6,8 +6,9 @@
 {% endblock %}
 
 {% block title %}
-
+Contact || PortfolioInc
 {% endblock %}
+{% block contact %} active {% endblock  %}
 
 {% block content %}
     <section class="breadcrumbs" style="background-image:url({% static 'HomePage/img/breadcrumbs-bg.jpg' %})">
