--- a/templates/HomePage/index.html
+++ b/templates/HomePage/index.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block title %}
-
+    Home || PortfolioInc
 {% endblock %}
-
+{% block home %} active {% endblock %}
 {% block content %}
     <!-- Hero Area -->
     <section class="hero-area">
