--- a/templates/HomePage/pricing.html
+++ b/templates/HomePage/pricing.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block title %}
-
+Pricing || PortfolioInc
 {% endblock %}
-
+{% block pricing %} active {% endblock  %}
 {% block content %}
     <!-- Breadcrumbs -->
     <div class="breadcrumbs" style="background-image:url({% static 'HomePage/img/breadcrumbs-bg.jpg' %})">
