--- a/templates/HomePage/testimonials.html
+++ b/templates/HomePage/testimonials.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block title %}
-
+Testimonial || PortfolioInc
 {% endblock %}
-
+{% block testimonial %} active {% endblock  %}
 {% block content %}
 
 
