--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -25,9 +25,9 @@
     <!-- Colors Css -->
     <link id="color-switcher" type="text/css" rel="stylesheet" href="#"/>
     <title>
-        {% block  title %}
+        {% block  head_title %}
 
-        {% endblock title %}
+        {% endblock  %}
     </title>
 
     <style>
@@ -61,12 +61,12 @@
 </div>
 <!-- Preloader End -->
 
-<div id="main-wrapper" class="oxyy-login-register " style="background-color: #9c27b0 !important;">
+<div id="main-wrapper" class="oxyy-login-register " style="background-color: #26313C !important;">
     <div class="container">
         <div class="row no-gutters min-vh-100 py-5">
             <!-- Welcome Text
             ========================= -->
-            <div class="col-lg-7 shadow-lg">
+            <div class="col-lg-6 shadow-lg">
                 <div class="hero-wrap d-flex align-items-center rounded-lg rounded-right-0 h-100">
                     <div class="hero-mask opacity-9 " style="background-color: #9c27b0 !important;"></div>
                     <div class="hero-bg hero-bg-scroll"
@@ -98,7 +98,7 @@
 
             <!-- Forgot password Form
             ========================= -->
-            <div class="col-lg-5 shadow-lg d-flex align-items-center rounded-lg rounded-left-0 bg-dark">
+            <div class="col-lg-6 shadow-lg d-flex align-items-center rounded-lg rounded-left-0   p-5">
                 <div class="container my-auto py-5">
                     <div class="row">
 
