--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,13 +11,13 @@
         <div class="header header-primary text-center">
             <h4 class="card-title">Sign up</h4>
             <h5 class="text-light">{% blocktrans %}Already have an account? Then please
-                <a href="{{ login_url }}" style="color: rgba(250,17,12,0.76) !important;">sign in</a>
+                <a href="{{ login_url }}" style="color: rgba(12,115,250,0.76) !important;">sign in</a>
                 .{% endblocktrans %}
             </h5>
         </div>
-        <div class="card-content p-3">
+        <div class="card-content py-2">
 
-            <form class="signup mx-auto col-6" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            <form class="signup mx-auto col-12 " id="signup_form" method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ form|crispy }}
                 {% if redirect_field_value %}
