--- a/templates/HomePage/base/home_base.html
+++ b/templates/HomePage/base/home_base.html
@@ -126,7 +126,7 @@
                                                             href="{% url 'home_page:home' %}">Home</a>
                                                     </li>
                                                     <li><a class="{% block service %} {% endblock %}"
-                                                           href="{% url 'home_page:service' %}">Services</a></li>
+                                                           href="{% url 'home_page:offer' %}">Services</a></li>
                                                     <li><a class="{% block blog %} {% endblock %}"
                                                            href="{% url 'blog:blog_list' %}">Blog</a></li>
                                                     <li><a class="{% block pricing %} {% endblock %}"
@@ -248,7 +248,7 @@
                         <h3 class="widget-title">Quick Links</h3>
                         <ul>
                             <li><a href="#"><i class="fa fa-angle-double-right"></i>About us</a></li>
-                            <li><a href="{% url 'home_page:service' %}"><i class="fa fa-angle-double-right"></i>Our
+                            <li><a href="{% url 'home_page:offer' %}"><i class="fa fa-angle-double-right"></i>Our
                                 Services</a></li>
                             <li><a href="{% url 'dashboard:dashboard' %}"><i class="fa fa-angle-double-right"></i>Creative
                                 Portfolio</a></li>
