--- a/templates/HomePage/payment.html
+++ b/templates/HomePage/payment.html
@@ -1,7 +1,5 @@
-{% extends 'Homepage/base/home_base.html' %}
+{#{% extends 'Homepage/base/home_base.html' %}#}
 {% load static %}
-<!-- Breadcrumbs -->
-
 
 
 {% block title %}
