--- a/templates/HomePage/include/pricing_include.html
+++ b/templates/HomePage/include/pricing_include.html
@@ -64,7 +64,7 @@
                             </ul>
                         </div>
                         <div class="pricing-bottom">
-                            <a href="{% url 'membership:payment' Standard.membership_type %}"
+                            <a href="{% url 'membership:payment_progress' Standard.membership_type %}"
                                class="theme-btn primary"><i class="fa fa-shopping-cart"></i>Order
                                 now</a>
                         </div>
@@ -99,7 +99,7 @@
                             </ul>
                         </div>
                         <div class="pricing-bottom">
-                            <a href="{% url 'membership:payment' Premium.membership_type %}"
+                            <a href="{% url 'membership:payment_progress' Premium.membership_type %}"
                                class="theme-btn primary"><i class="fa fa-shopping-cart"></i>Order
                                 now</a>
                         </div>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="pricing-bottom">
 
-                            <a href="{% url 'membership:payment' Professional.membership_type %}"
+                            <a href="{% url 'membership:payment_progress' Professional.membership_type %}"
                                class="theme-btn primary"><i class="fa fa-shopping-cart"></i>Order
                                 now</a>
                         </div>
